完善redis工具配置类